name:                lxdfile
version:             0.2.0.1
synopsis:            A Dockerfile-like file format for LXD containers.
description:
    Manage LXD containers using a Dockerfile-like file format, with
    support to store metadata.
homepage:            https://github.com/hverr/lxdfile#readme
license:             GPL-3
license-file:        LICENSE
author:              Henri Verroken
maintainer:          henriverroken@gmail.com
copyright:           2016 Henri Verroken
category:            System
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Language.LXDFile
                     , Language.LXDFile.InitScript
                     , Language.LXDFile.InitScript.Lexer
                     , Language.LXDFile.InitScript.Parser
                     , Language.LXDFile.InitScript.Types
                     , Language.LXDFile.Lexer
                     , Language.LXDFile.Parser
                     , Language.LXDFile.Types
                     , Language.LXDFile.Version
                     , System.LXD.LXDFile
                     , System.LXD.LXDFile.Build
                     , System.LXD.LXDFile.Inject
                     , System.LXD.LXDFile.Launch
                     , System.LXD.LXDFile.ScriptAction
                     , System.LXD.LXDFile.Utils.Monad
                     , System.LXD.LXDFile.Utils.Shell
                     , System.LXD.LXDFile.Utils.String
                     , System.LXD.LXDFile.Utils.Text
  other-modules:       Paths_lxdfile
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , aeson-pretty
                     , bytestring
                     , directory
                     , either
                     , filepath
                     , lens
                     , mtl
                     , parsec
                     , split
                     , system-filepath
                     , tar
                     , temporary
                     , text
                     , transformers
                     , turtle
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
  ghc-options:         -Wall -Werror

executable lxdfile
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -static -optl-static -optl-pthread -Wall -Werror
  build-depends:       base
                     , lxdfile
                     , mtl
                     , optparse-applicative
                     , transformers
  default-language:    Haskell2010

test-suite lxdfile-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , lxdfile
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/hverr/lxdfile
